--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,4 @@ services:
     ports: 
       - "5432"
     environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      POSTGRES_HOST_AUTH_METHOD: 'trust'
